--- a/misc/etc/interception/udevmon.d/ergodox.yaml
+++ b/misc/etc/interception/udevmon.d/ergodox.yaml
@@ -1,6 +1,6 @@
-- JOB: "intercept -g $DEVNODE | dual-function-keys -c /etc/interception/dfk.thumb-cluster.yaml | uinput -d $DEVNODE"
+- JOB: "intercept -g $DEVNODE | dual-function-keys -c /etc/interception/dual-function-keys/dfk.thumb-cluster.yaml | uinput -d $DEVNODE"
   DEVICE:
-    NAME: "ZSA Technology Labs ErgoDox EZ"
+    NAME: "ZSA Technology Labs ErgoDox EZ Keyboard"
     EVENTS:
       EV_KEY: [ KEY_LEFTSHIFT ]
 
