--- a/config/X11/xorg.conf.d/90-keyboard.conf
+++ b/config/X11/xorg.conf.d/90-keyboard.conf
@@ -8,5 +8,5 @@ Section "InputClass"
 	Option "XkbVariant" "dvp,"
 
 	# man xkeyboard-config
-	Option "XkbOptions" "caps:escape,grp:shift_caps_toggle"
+	Option "XkbOptions" "caps:escape,grp:win_space_toggle"
 EndSection
