--- a/config/sway/config
+++ b/config/sway/config
@@ -35,6 +35,8 @@ exec swaybg --color '#000000'
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
+exec way-displays > /tmp/way-displays.${XDG_VTNR}.${USER}.log 2>&1
+
 ### Idle configuration
 #
 # Example configuration:
@@ -264,8 +266,5 @@ client.urgent           $base02 $base08 $base05 $base05 $base02
 client.placeholder      $base02 $base0e $base05 $base05 $base02
 # green WTF
 client.background       $base0B
-
-# exec kanshi
-output 'Unknown ASUS XG32V 0x0000CF52' scale 1.25
 
 include /etc/sway/config.d/*
