--- a/root/etc/interception/udevmon.d/dactyl.yaml
+++ b/root/etc/interception/udevmon.d/dactyl.yaml
@@ -1,6 +1,6 @@
 - JOB: "intercept -g $DEVNODE | dual-function-keys -c /etc/interception/dual-function-keys/dfk.thumb-cluster.yaml | modifiertrainer | uinput -d $DEVNODE"
   DEVICE:
-    NAME: "tshort Dactyl-Manuform \\(6x6\\) Keyboard"
+    NAME: "tshort Dactyl-Manuform-6x6 Keyboard"
     EVENTS:
       EV_KEY: [ KEY_LEFTSHIFT ]
 
