--- a/root/etc/interception/udevmon.d/ergodox.yaml
+++ b/root/etc/interception/udevmon.d/ergodox.yaml
@@ -1,6 +1,7 @@
 - JOB: "intercept -g $DEVNODE | dual-function-keys -c /etc/interception/dual-function-keys/dfk.thumb-cluster.yaml | modifiertrainer | uinput -d $DEVNODE"
   DEVICE:
-    NAME: "ZSA Technology Labs ErgoDox EZ Keyboard"
+    # cover both NKRO and 6KRO which sometimes appears after boot
+    NAME: "ZSA Technology Labs ErgoDox EZ.*"
     EVENTS:
       EV_KEY: [ KEY_LEFTSHIFT ]
 
