--- a/config/sway/config
+++ b/config/sway/config
@@ -20,7 +20,8 @@ set $term alacritty
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu bmr | xargs swaymsg exec --
+set $menu bemenu-run | xargs swaymsg exec --
+set $menu-app menjar | xargs swaymsg exec --
 
 ### Output configuration
 #
@@ -93,6 +94,7 @@ input type:pointer {
 
     # Start your launcher
     bindsym $mod+d exec $menu
+    bindsym $mod+Ctrl+d exec $menu-app
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
