--- a/config/sway/keys.config
+++ b/config/sway/keys.config
@@ -4,13 +4,12 @@ set $mod3 Mod1+Ctrl+Shift
 
 
 # mouse
-tiling_drag disable
-floating_modifier $mod1 normal
+floating_modifier $mod1
 bindsym --whole-window $mod1+button2 floating toggle
 
 
 # thumb
-bindsym $mod1+escape floating toggle
+bindsym $mod1+Escape floating toggle
 bindsym $mod1+space fullscreen
 bindsym $mod1+Return exec exec alacritty > /dev/null 2>&1
 bindsym $mod2+Return exec exec browser > /dev/null 2>&1
