i3/dwm: start on console 2/3

--- a/config/i3/config
+++ b/config/i3/config
@@ -2,6 +2,7 @@ include ~/.config/sway/appearance.config
 include ~/.config/sway/keys.config
 
 
+# borders
 default_border normal 1
 hide_edge_borders smart
 
