--- a/config/sway/keys.config
+++ b/config/sway/keys.config
@@ -30,7 +30,7 @@ bindsym $mod1+i workspace number 5
 
 bindsym $mod1+apostrophe focus parent
 bindsym $mod1+q focus child
-bindsym $mod3+q exec swaymsg exit
+bindsym $mod3+q exit
 bindsym $mod1+j focus down
 bindsym $mod2+j move down
 bindsym $mod1+k focus up
