sway: volume control via pactl

--- a/config/sway/keys.config
+++ b/config/sway/keys.config
@@ -15,19 +15,29 @@ bindsym $mod1+Return exec exec alacritty > /dev/null 2>&1
 bindsym $mod2+Return exec exec browser > /dev/null 2>&1
 
 
+# special
+bindsym XF86AudioLowerVolume exec vollower
+bindsym XF86AudioRaiseVolume exec volraise
+bindsym XF86AudioMute exec volmute
+bindsym XF86AudioMicMute exec volmutemic
+
+
 # left
+# $
 bindsym $mod1+semicolon move container to workspace number 1
 bindsym $mod1+comma move container to workspace number 2
 bindsym $mod1+period move container to workspace number 3
 bindsym $mod1+p move container to workspace number 4
 bindsym $mod1+y move container to workspace number 5
 
+# @
 bindsym $mod1+a workspace number 1
 bindsym $mod1+o workspace number 2
 bindsym $mod1+e workspace number 3
 bindsym $mod1+u workspace number 4
 bindsym $mod1+i workspace number 5
 
+# \
 bindsym $mod1+apostrophe focus parent
 bindsym $mod1+q focus child
 bindsym $mod3+q exit
@@ -39,10 +49,12 @@ bindsym $mod2+k move up
 
 # right
 bindsym $mod1+f focus mode_toggle
+# g
 bindsym $mod3+c reload
 bindsym $mod1+r mode "resize"
 bindsym $mod1+l focus right
 bindsym $mod2+l move right
+# /
 
 bindsym $mod1+d kill
 bindsym $mod1+h focus left
@@ -57,6 +69,9 @@ bindsym $mod2+minus move scratchpad
 bindsym $mod1+b splitv
 bindsym $mod1+m splith
 bindsym $mod3+w exec wificonnect
+# v
+# z
+# \
 
 
 # modal
