sway: key repeat to match X

--- a/config/sway/config
+++ b/config/sway/config
@@ -21,6 +21,8 @@ input type:keyboard {
     xkb_layout "us,us"
     xkb_variant "dvp,"
     xkb_options "caps:escape,grp:win_space_toggle"
+    repeat_delay 400
+    repeat_rate 50
 }
 input type:touchpad {
     tap enabled
