sway: swayidle/swaylock

--- a/config/sway/config
+++ b/config/sway/config
@@ -9,15 +9,16 @@ tiling_drag disable
 # keys
 bindsym $mod1+x exec bemenu-run
 bindsym $mod2+x exec exec $(menjar) > /dev/null 2>&1
+bindsym $mod3+l exec swaylock -f -c ${BASE01} > /dev/null 2>&1
 
 
 # startup
 exec way-displays > /tmp/way-displays.${XDG_VTNR}.${USER}.log 2>&1
-exec swayidle -w -d \
-	timeout 180 'swaylock -f -c ${BASE01}' \
-	timeout 300 'swaymsg "output * dpms off"' \
-	resume 'swaymsg "output * dpms on"' \
+exec swayidle -w \
+	timeout 180  'swaylock -f -c ${BASE01}' \
 	before-sleep 'swaylock -f -c ${BASE01}' \
+	timeout 300  'swaymsg "output * dpms off"' \
+	resume       'swaymsg "output * dpms on"' \
 	> /tmp/swayidle.${XDG_VTNR}.${USER}.log 2>&1
 
 
