--- a/tmux.conf
+++ b/tmux.conf
@@ -10,8 +10,9 @@ set -g status off
 # moar scollback
 set -g history-limit 10000
 
-# updatetmuxenv will update the environment based on these
-set -g -a update-environment ' TERM XDG_VTNR SWAYSOCK WAYLAND_DISPLAY SSH_CONNECTION'
+# Propagate the "real terminal" that tmux operating inside of.
+# updtmuxterm will calculate and set an apprpriate TERM from this.
+set -g -a update-environment ' TERM XDG_VTNR SWAYSOCK WAYLAND_DISPLAY'
 
 # This optimistic default may be overridden by updatetmuxterm. We need this during
 # session initialisation so that it gains features e.g. italic fonts.
