tmux: don't dynamically update alacritty - it's too slow

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,12 +10,11 @@ set -g status off
 # moar scollback
 set -g history-limit 10000
 
-# Propagate the "real terminal" that tmux operating inside of.
-# updtmuxterm will calculate and set an apprpriate TERM from this.
+# export these from the invoking process: the real terminal
 set -g -a update-environment ' TERM XDG_VTNR SWAYSOCK WAYLAND_DISPLAY'
 
-# This optimistic default may be overridden by updatetmuxterm. We need this during
-# session initialisation so that it gains features e.g. italic fonts.
+# assume everything can handle 256color
+# overriding dynamically via, say, precmd is too expensive
 set -g default-terminal "tmux-256color"
 
 # Not all terminals correctly report 24 bit color capabilities. We can force it.
