sway: use mod2 for workspace sending

--- a/config/sway/keys.config
+++ b/config/sway/keys.config
@@ -24,18 +24,23 @@ bindsym XF86AudioMicMute exec volmutemic
 
 # left
 # $
-bindsym $mod1+semicolon move container to workspace number 1
-bindsym $mod1+comma move container to workspace number 2
-bindsym $mod1+period move container to workspace number 3
-bindsym $mod1+p move container to workspace number 4
-bindsym $mod1+y move container to workspace number 5
+# ;
+# ,
+# .
+# p
+# y
 
 # @
 bindsym $mod1+a workspace number 1
+bindsym $mod2+a move container to workspace number 1
 bindsym $mod1+o workspace number 2
+bindsym $mod2+o move container to workspace number 2
 bindsym $mod1+e workspace number 3
+bindsym $mod2+e move container to workspace number 3
 bindsym $mod1+u workspace number 4
+bindsym $mod2+u move container to workspace number 4
 bindsym $mod1+i workspace number 5
+bindsym $mod2+i move container to workspace number 5
 
 # \
 bindsym $mod1+apostrophe focus parent
