sway: add workspace 0

--- a/config/sway/keys.config
+++ b/config/sway/keys.config
@@ -30,7 +30,8 @@ bindsym XF86AudioMicMute exec volmutemic
 # p
 # y
 
-# @
+bindsym $mod1+at workspace number 0
+bindsym $mod2+at move container to workspace number 0
 bindsym $mod1+a workspace number 1
 bindsym $mod2+a move container to workspace number 1
 bindsym $mod1+o workspace number 2
